css/main.css
html {
	font-size: 16px;
}
body {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	font-size: 1em;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

.container{
	max-width: 1200px;
	margin: 0 auto;
	width: 90%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

h1,
h2,
h3 {
	color: black;
	text-transform: uppercase;
	font-weight: 700;
}
h1 {
	font-size: 1.875em;
}
h2 {
	font-size: 1.125em;
}
h3 {
	font-size: 0.75em;
}

p {
	font-size: 0.875em;
	line-height: 21px;
    	padding: 0 30px;
}

/*The widths are in a percentage!*/
header {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

header h1 {
	margin: 0;
	padding: 38px 0 25px 0;
	border-bottom: 3px solid #77a466;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
}
header h1 span {
	color: #77a466;
}

header nav {

	padding: 25px 0;
}
header nav ul {
	margin: 0;
	padding: 0;
	line-height: 2.5em;
}
header nav ul li {
	text-transform: uppercase;
	font-weight: 700;
	font-size: 0.875em;
	padding: 0 10px;
	display: flex;
	justify-content: center;

}
header nav ul li a{
	text-decoration: none;
	color:#77a466;
}

/*The widths are in a percentage!*/
.top-section,
.bottom-section {
	margin: 0 auto;
}

.main-image {

}
.main-image img {
	width: 100%;
	border-bottom: 3px solid #77a466;
	border-top: 3px solid #77a466;
}

.main-title {

}
.main-title h2 {
	text-align: left;
	padding: 5px 0;
	color: #77a466;
}
.main-title p {
	padding: 0;
	font-size: 16px;
	line-height: 25px;
}

.section-one,
.section-two,
.section-three {
	width: 100%;
	border-top: 1px solid #eee;
}

.section-one h3 {
	padding: 10px 0;
}

.section-two {

}

.section-two h3,
.section-three h3 {

}

.menu {
	list-style: none;
	padding: 0;
}
.menu li {
	padding: 10px 0;
	color:#77a466;
}

.reviews {
	color: #333;
	font-size: 1em;
	line-height: 21px;
	padding: 0;
}

.address {
	font-size: 1em;
	line-height: 24px;
	padding: 0;
}

/*The widths are in a percentage!*/
footer {
	border-top: 3px solid #eee;
	margin: 0 auto;
	width: 100%;
	text-align: center;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}
footer span {
	font-family: 'Galada', cursive;
	text-transform: lowercase;
	color: #77a466;
	font-size: 14px;
}

@media all and (min-width:768px) {
    /* Tablet styles here */

.bottom-section {
	display: flex;
	justify-content: center;

}

.section-one {
	flex-basis: 400px;
}

.section-two {
	border-left: 1px solid #eee;
	border-right: 1px solid #eee;
	padding: 10px 20px 0 20px;
	flex-basis: 400px;

}

.section-three {
	padding: 10px 0 0 20px;
	flex-basis: 400px;
}
 
}
 
@media all and (min-width:1200px) {
    /* Desktop styles here */

header {
	width: 100%;
}

header h1 {
	width: 60%;
	padding: 38px 0;
	border-bottom: none;
	text-align: left;
	display: flex;
	justify-content: flex-start;
	align-items: center;
}

header nav {
	width: 40%;
}

header nav ul {
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

}

